@@ -8,6 +8,10 @@
    stringification of `start`, `end`, `strand`, and `score` in feature
    JSON.  Thanks to Matt Bomhoff for pointing this out.
 
+ * Fixed bug in which URLs for plugin resources were not assembled
+   relative to the `browserRoot` config variable.  Thanks to Matt
+   Bomhoff for pointing this out.
+
  * The `trackSelector.type` global config variable can now contain
    fully-qualified class names, so plugins can contain their own
    tracklist classes.  Thanks to Matt Bomhoff for pointing this out.
